# blockchaindemo

core/: Cargo.toml
core/src/: block.rs  blockchain.rs
main/: Cargo.toml
main/src/: main.rs
utils/: Cargo.toml
utils/src/: coder.rs
