[package]
name = "utils"
version = "0.1.0"
authors = ["FWangZil <acewzk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
bincode = "1.3.1"
rust-crypto = "0.2.36"
